Events & Contents Updated

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "livePreview.defaultPreviewPath": "/about.html"
+  "livePreview.defaultPreviewPath": "/about.html",
+  "nuxt.isNuxtApp": false
 }
